[metadata]
name = coviddateutil
version = attr:coviddateutil.__version__
description = A joke package for calcuating the day of March 2020 it currently is.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/sigmavirus24/coviddateutil
author = Ian Stapleton Cordasco
author_email = graffatcolmingov@gmail.com
license = 3-clause BSD
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
requires_dist =
    attrs>=21.4.0
    python-dateutil>=2.6.0

[options]
packages = find:
install_requires =
    attrs>=21.4.0
    python-dateutil>=2.6.0
python_requires = >=3.10
package_dir =
    =src

[options.packages.find]
where = src

[wheel]
universal = 1
